fix: darkmode and scrollbar

--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -13199,7 +13199,7 @@ aside.tf-asview tr.tf-active td {
 
 ::-webkit-scrollbar {
   width: 8px;
-  height: 4px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar-track {
@@ -13643,6 +13643,10 @@ html[data-bs-theme=dark] .tn-menu li:focus {
 }
 html[data-bs-theme=dark] .td-datagrid:focus .tf-active td {
   background-color: var(--content-background-hover-color);
+}
+html[data-bs-theme=dark] .tbs-scheduler td,
+html[data-bs-theme=dark] .tbs-scheduler-allday {
+  border-color: var(--t-border-color);
 }
 
 .scroll {
