--- a/src/scss/layout/_scrollbar.scss
+++ b/src/scss/layout/_scrollbar.scss
@@ -1,9 +1,8 @@
 
 ::-webkit-scrollbar {
     width: 8px;
-    height: 4px;
+    height: 6px;
 }
-
 
 ::-webkit-scrollbar-track{
     background: transparent;
